--- a/_posts/框架编写流程.md
+++ b/_posts/框架编写流程.md
@@ -733,10 +733,11 @@ public class BookService {
 
        rollbackFor: 当编译时报异常时，可以将编译时设置回滚
 
-       propagation:传播  REQUIRED     REQUIRES_NEW
+       propagation:传播行为  REQUIRED     REQUIRES_NEW
                   一般使用上面两个
                   REQUIRED  和上一个事务使用同一个连接(坐老王的车)
                   REQUIRES_NEW  上一个事务挂起，创建一个新事务(不坐老王的车)
+                  当坐上了”老王的车时车速是看老王的不是自己的“
 
      */
     @Transactional(propagation = Propagation.REQUIRED)
